<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorHolderLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="hr.foi.air.trucktrack.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="271dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/home_screen_pic" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorGreyLogin"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/stella_gmail_com"
                android:hint="@string/prompt_email"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtLozinka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/login_password_padding"
                android:text="@string/lozinka" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:text="@string/_123456"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/cbIsDriver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/vozac" />

            <TextView
                android:id="@+id/txtWrongEmailOrPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/login_password_padding"
                android:text="@string/wrong_email_password"
                android:textAlignment="center"
                android:textColor="@color/colorGreenLogin"
                android:textSize="16dp"
                android:textStyle="bold"
                android:visibility="gone" />
       </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/action_sign_in"
        android:textColor="@color/colorGreyLogin"
        android:textStyle="bold"/>

</android.support.design.widget.CoordinatorLayout>
