...
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/btnSetDoneJob"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:adjustViewBounds="false"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done_all_black_24dp"
            android:tint="#7d7d7d"/>

        <ImageView
            android:id="@+id/btnACKJob"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:adjustViewBounds="false"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_done_black_24dp"
            android:tint="#7d7d7d"/>
...
