<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/viewIcon"
        android:icon="@drawable/ic_view_list_white_48px"
        app:showAsAction="ifRoom"
        android:title="Promjena načina prikaza">
    </item>
    <item
        android:id="@+id/refreshIcon"
        android:icon="@drawable/ic_refresh_white_48px"
        app:showAsAction="ifRoom|withText"
        android:title="Refresh">
    </item>
</menu>