<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvDrivers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>